# pyl1

./: .pylintrc  README.md  pyproject.toml  setup.py  tox.ini
examples/: example_chambolle_pock.py  example_chambolle_pock3d.py  phantom_3d.py
pyl1/: operators.py  solvers.py  util.py
src/pyl1/: operators.py  solvers.py  util.py
tests/: __init__.py  test_tv.py
