[project]
name = "pyl1"
description = "Tools for sparse regression."
version = "0.9.1"
authors = [
    {name = "Folkert Bleichrodt", email = "3368283-3chelon@users.noreply.gitlab.com"},
]

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
extend-select = ["ANN", "B", "D", "E", "F",  "I"]
ignore = ["ANN401"]
pydocstyle.convention = "google"

[tool.tox]
envlist = ["py313"]

[tool.tox.env.py313]
deps = [
    "pytest",
    "pylint",
    "ruff",
]
commands = [
    ["pytest", "--maxfail=1"],
    ["pylint", "src", "examples", "tests"],
    ["ruff", "check"],
    ["ruff", "format", "--check"],
]
